kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qldsv-htc-project
  labels:
    name: qldsv-htc-project
    app.kubernetes.io/managed-by: kubectl
