kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qldsv-htc-project-service
  namespace: qldsv-htc-project
  labels:
    app: qldsv-htc-project
    app.kubernetes.io/name: qldsv-htc-project
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: health
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: qldsv-htc-project
